[package]
name = "cannon"
description = "An implementation of the OP Stack's native BE MIPS32 VM in Rust"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
# workspace
alloy-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# local
cannon-fpvm = { path = "../fpvm" }

# misc
kona-preimage = { git = "https://github.com/ethereum-optimism/kona" }
kona-common = { git = "https://github.com/ethereum-optimism/kona" }

tempfile = "3.10"
async-trait = "0.1.81"
flate2 = "1.0.28"
command-fds = "0.2.3"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
proptest = "1.4.0"

[features]
tracing = ["dep:tracing"]
